--- a/style.css
+++ b/style.css
@@ -19,3 +19,19 @@ button {
     border: none;
     font-weight: bold;
 }
+
+ul {
+    list-style-type: none;
+    padding-left: 0;
+    
+}
+
+li {
+    color: aquamarine;
+    margin-top: 5px;
+    
+}
+
+li a {
+    color: darkgreen;
+}
